# axum_maud_todo

./: .env  Cargo.toml  README.md  build.rs  docker-compose.yml  init.sql
.sqlx/: query-01dd1cb6353ec9925a676e7a6def699b713fb8868efc1fe7818be63be2ec6266.json  query-7e4c579a8155701f26d9f5d0cc8018a108510081ba7c104ffbe6859cbc638d5b.json
queries/: todo.sql
src/: cornucopia.rs  main.rs  target_consts.rs
src/components/: main.rs  mod.rs  response.rs  todo.rs
src/services/: crud.rs  mod.rs  utils.rs
static/: script-twind.js  style.css
