[package]
name = "axum-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = {version = "1.34.0", features = ["full"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
maud = { version = "*", features = ["axum"] }
tower-http = { features = ["full"] }
mime_guess = "2.0.4"
axum_static = "1.2.3"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "json" ] }
