[package]
name = "axum-htmx-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
axum = "0.6.20"
tokio = {version = "1.34.0", features = ["full"]}
futures = "0.3.25"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
maud = { version = "*", features = ["axum"] }
tower-http = { features = ["full"] }
mime_guess = "2.0.4"
axum_static = "1.2.3"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "json" ] }
axum-htmx = "0.4.0"
cornucopia_async = "0.6.0"

# Postgres interaction
tokio-postgres = "0.7.7"
postgres-types = "0.2.4"
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
## Connection pooling
deadpool-postgres = "0.12.1"
axum-macros = "0.4.1"

[build-dependencies]
cornucopia = "0.9.0"
